--- a/locale/fr/shrunked.properties
+++ b/locale/fr/shrunked.properties
@@ -9,21 +9,21 @@ no_label = Non
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
-questions = Resize this image?;Resize these images?
-preview_originalsize = Original dimensions: %S px × %S px
-preview_originalfilesize = Original file size: %S
-preview_resized = Resized to: %S px × %S px
-preview_resizedfilesize_estimating = Estimating new file size…
-preview_resizedfilesize = Estimated new file size: %S
-preview_notresized = Not resized
+questions = Redimensionner cette image ? ; Redimensionner ces images?
+preview_originalsize = Dimensions d'origine: %S px × %S px
+preview_originalfilesize = Taille d'origine: %S
+preview_resized = Redimensionné à: %S px × %S px
+preview_resizedfilesize_estimating = Estimation de la nouvelle taille…
+preview_resizedfilesize = Estimation de la nouvelle taille : %S
+preview_notresized = Non redimensionnée
 unit_bytes = B
 # Localization note: this should match shrunked-unit.kilobytes in shrunked.dtd
 unit_kilobytes = kB
 unit_megabytes = MB
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
-status_resizing = Resizing image…;Resizing images…
+status_resizing = Redimensionnement de l'image…; Redimensionnement des  images…
 
-donate_notification = Shrunked Image Resizer has been updated to version %S. Shrunked is free, but your donation is appreciated!
-donate_button_label = Donate
+donate_notification = Shrunked Image Resizer a été mis à jour à la version %S. Shrunked est gratuit, mais une don sera apprécié !
+donate_button_label = Donner
 donate_button_accesskey = D
