--- a/locale/de/shrunked.properties
+++ b/locale/de/shrunked.properties
@@ -9,21 +9,21 @@ no_label = Nein
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
-questions = Resize this image?;Resize these images?
-preview_originalsize = Original dimensions: %S px × %S px
-preview_originalfilesize = Original file size: %S
-preview_resized = Resized to: %S px × %S px
-preview_resizedfilesize_estimating = Estimating new file size…
-preview_resizedfilesize = Estimated new file size: %S
-preview_notresized = Not resized
+questions = Dieses Bild skalieren?;Diese Bilder skalieren?
+preview_originalsize = Originale Maße: %S px × %S px
+preview_originalfilesize = Originale Dateigröße: %S
+preview_resized = Skalieren auf: %S px × %S px
+preview_resizedfilesize_estimating = Dateigröße neu schätzen…
+preview_resizedfilesize = Geschätzte neue Dateigröße: %S
+preview_notresized = Nicht skaliert
 unit_bytes = B
 # Localization note: this should match shrunked-unit.kilobytes in shrunked.dtd
 unit_kilobytes = kB
 unit_megabytes = MB
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
-status_resizing = Resizing image…;Resizing images…
+status_resizing = Skaliere Bild…;Skaliere Bilder…
 
-donate_notification = Shrunked Image Resizer has been updated to version %S. Shrunked is free, but your donation is appreciated!
-donate_button_label = Donate
+donate_notification = Shrunked Image Resizer wurde auf die Version  %S upgedated. Shrunked ist kostenlos, aber Deine Spende ist willkommen!
+donate_button_label = Spenden
 donate_button_accesskey = D
