--- a/locale/cs/shrunked.properties
+++ b/locale/cs/shrunked.properties
@@ -1,29 +1,29 @@
-disabled = disabled
+disabled = nepřístupné
 dimensions = %S px × %S px
 yes_accesskey = Y
-yes_label = Yes
+yes_label = Ano
 never_accesskey = e
-never_label = Never for this site
+never_label = Nikdy pro tyto stránky
 no_accesskey = N
-no_label = No
+no_label = Ne
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
-questions = Resize this image?;Resize these images?
-preview_originalsize = Original dimensions: %S px × %S px
-preview_originalfilesize = Original file size: %S
-preview_resized = Resized to: %S px × %S px
-preview_resizedfilesize_estimating = Estimating new file size…
-preview_resizedfilesize = Estimated new file size: %S
-preview_notresized = Not resized
+questions = Změnit velikost tohoto obrázku?;Změnit velikost těchto obrázků?
+preview_originalsize = Původní rozměry: %S px × %S px
+preview_originalfilesize = Původní velikost souboru: %S
+preview_resized = Změněno na %S px × %S px
+preview_resizedfilesize_estimating = Odhaduji velikost souboru…
+preview_resizedfilesize = Přibližná velikost souboru: %S
+preview_notresized = Nezměněno
 unit_bytes = B
 # Localization note: this should match shrunked-unit.kilobytes in shrunked.dtd
 unit_kilobytes = kB
 unit_megabytes = MB
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
-status_resizing = Resizing image…;Resizing images…
+status_resizing = Měním velikost obrázku…;Měním velikost obrázků…
 
-donate_notification = Shrunked Image Resizer has been updated to version %S. Shrunked is free, but your donation is appreciated!
-donate_button_label = Donate
+donate_notification = Shrunked Image Resizer nebyl updatován na verzi %S. Shrunked je zdarma, ale uvítáme Váš příspěvek na vývoj.
+donate_button_label = Přispějte
 donate_button_accesskey = D
