--- a/locale/cs/shrunked.properties
+++ b/locale/cs/shrunked.properties
@@ -1,8 +1,8 @@
 disabled = nepřístupné
 dimensions = %S px × %S px
-yes_accesskey = Y
+yes_accesskey = A
 yes_label = Ano
-never_accesskey = e
+never_accesskey = N
 never_label = Nikdy pro tyto stránky
 no_accesskey = N
 no_label = Ne
@@ -26,4 +26,4 @@ status_resizing = Měním velikost obrázku…;Měním velikost obrázků…
 
 donate_notification = Shrunked Image Resizer nebyl updatován na verzi %S. Shrunked je zdarma, ale uvítáme Váš příspěvek na vývoj.
 donate_button_label = Přispějte
-donate_button_accesskey = D
+donate_button_accesskey = P
