--- a/locale/de/shrunked.properties
+++ b/locale/de/shrunked.properties
@@ -2,7 +2,7 @@ disabled = deaktiviert
 dimensions = %S px × %S px
 yes_accesskey = J
 yes_label = Ja
-never_accesskey = i
+never_accesskey = e
 never_label = Nie für diese Seite
 no_accesskey = N
 no_label = Nein
@@ -18,12 +18,12 @@ preview_resizedfilesize = Geschätzte neue Dateigröße: %S
 preview_notresized = Nicht skaliert
 unit_bytes = B
 # Localization note: this should match shrunked-unit.kilobytes in shrunked.dtd
-unit_kilobytes = kB
+unit_kilobytes = KB
 unit_megabytes = MB
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
-status_resizing = Skaliere Bild…;Skaliere Bilder…
+status_resizing = Bild skalieren…;Bilder skalieren…
 
-donate_notification = Shrunked Image Resizer wurde auf die Version %S upgedated. Shrunked ist kostenlos, aber Deine Spende ist willkommen!
+donate_notification = Shrunked Image Resizer wurde auf die Version %S aktualisiert. Shrunked ist kostenlos, aber Ihre Spende ist willkommen!
 donate_button_label = Spenden
-donate_button_accesskey = D
+donate_button_accesskey = d
