--- a/locale/it/shrunked.properties
+++ b/locale/it/shrunked.properties
@@ -9,21 +9,21 @@ no_label = No
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
-questions = Resize this image?;Resize these images?
-preview_originalsize = Original dimensions: %S px × %S px
-preview_originalfilesize = Original file size: %S
-preview_resized = Resized to: %S px × %S px
-preview_resizedfilesize_estimating = Estimating new file size…
-preview_resizedfilesize = Estimated new file size: %S
-preview_notresized = Not resized
+questions = Ridimensiona questa immagine?;Ridimensiona queste immagini?
+preview_originalsize = Dimensioni originali: %S px × %S px
+preview_originalfilesize = Dimensione file di origine: %S
+preview_resized = Ridimensionato a: %S px × %S px
+preview_resizedfilesize_estimating = Sto stimando la dimensione del nuovo file …
+preview_resizedfilesize = Il dimensione del nuovo file è stimata: %S
+preview_notresized = Non ridimensionato
 unit_bytes = B
 # Localization note: this should match shrunked-unit.kilobytes in shrunked.dtd
 unit_kilobytes = kB
 unit_megabytes = MB
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
-status_resizing = Resizing image…;Resizing images…
+status_resizing = Ridimensionamento immagine…;Ridimensionamento immagini…
 
-donate_notification = Shrunked Image Resizer has been updated to version %S. Shrunked is free, but your donation is appreciated!
-donate_button_label = Donate
+donate_notification = Shrunked Image Resizer è stato aggiornato alla versione %S. Shrunked è gratuito, ma è gradita una tua donazione!
+donate_button_label = Dona
 donate_button_accesskey = D
