--- a/locale/zh-CN/shrunked.properties
+++ b/locale/zh-CN/shrunked.properties
@@ -9,21 +9,21 @@ no_label = 否
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
-questions = Resize this image?;Resize these images?
-preview_originalsize = Original dimensions: %S px × %S px
-preview_originalfilesize = Original file size: %S
-preview_resized = Resized to: %S px × %S px
-preview_resizedfilesize_estimating = Estimating new file size…
-preview_resizedfilesize = Estimated new file size: %S
-preview_notresized = Not resized
+questions = 调整此图片的尺寸？;调整此图片的尺寸？;
+preview_originalsize = 原尺寸：%S px × %S px
+preview_originalfilesize = 原文件大小：%S
+preview_resized = 调整到：%S px × %S px
+preview_resizedfilesize_estimating = 正在估算新文件的大小…
+preview_resizedfilesize = 估算的新文件大小：%S
+preview_notresized = 不调整
 unit_bytes = B
 # Localization note: this should match shrunked-unit.kilobytes in shrunked.dtd
 unit_kilobytes = kB
 unit_megabytes = MB
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
-status_resizing = Resizing image…;Resizing images…
+status_resizing = 正在调整图片尺寸…;正在调整图片尺寸…
 
-donate_notification = Shrunked Image Resizer has been updated to version %S. Shrunked is free, but your donation is appreciated!
-donate_button_label = Donate
+donate_notification = Shrunked Image Resizer 已更新到版本 %S。Shrunked 是一款免费软件，但您的捐助能让我们变得更好！
+donate_button_label = 捐助
 donate_button_accesskey = D
