Resize multiple attachments from context menu

--- a/locale/en-US/shrunked.properties
+++ b/locale/en-US/shrunked.properties
@@ -10,6 +10,7 @@ no_label = No
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Resize this image?;Resize these images?
+context_label = Resize this image…;Resize these images…
 preview_originalsize = Original dimensions: %S px × %S px
 preview_originalfilesize = Original file size: %S
 preview_resized = Resized to: %S px × %S px
