Update strings for release

--- a/locale/cs/shrunked.properties
+++ b/locale/cs/shrunked.properties
@@ -10,6 +10,7 @@ no_label = Ne
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Změnit velikost tohoto obrázku?;Změnit velikost těchto obrázků?
+context_label = Resize this image…;Resize these images…
 preview_originalsize = Původní rozměry: %S px × %S px
 preview_originalfilesize = Původní velikost souboru: %S
 preview_resized = Změněno na %S px × %S px
