--- a/locale/de/shrunked.properties
+++ b/locale/de/shrunked.properties
@@ -10,6 +10,7 @@ no_label = Nein
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Dieses Bild skalieren?;Diese Bilder skalieren?
+context_label = Resize this image…;Resize these images…
 preview_originalsize = Originale Maße: %S px × %S px
 preview_originalfilesize = Originale Dateigröße: %S
 preview_resized = Skalieren auf: %S px × %S px
