--- a/locale/es-ES/shrunked.properties
+++ b/locale/es-ES/shrunked.properties
@@ -10,6 +10,7 @@ no_label = No
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Redimensionar esta imagen?;Redimensionar estas imágenes?
+context_label = Resize this image…;Resize these images…
 preview_originalsize = Dimensiones originales: %S px x %S px
 preview_originalfilesize = Tamaño de archivo original: %S
 preview_resized = Redimensionado a: %S px x %S px
