--- a/locale/it/shrunked.properties
+++ b/locale/it/shrunked.properties
@@ -10,6 +10,7 @@ no_label = No
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Ridimensiona questa immagine?;Ridimensiona queste immagini?
+context_label = Resize this image…;Resize these images…
 preview_originalsize = Dimensioni originali: %S px × %S px
 preview_originalfilesize = Dimensione file di origine: %S
 preview_resized = Ridimensionato a: %S px × %S px
