--- a/locale/nl/shrunked.properties
+++ b/locale/nl/shrunked.properties
@@ -10,6 +10,7 @@ no_label = Nee
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Deze afbeelding verkleinen?;Deze afbeeldingen verkleinen?
+context_label = Resize this image…;Resize these images…
 preview_originalsize = Originele afmetingen: %S px x %S px
 preview_originalfilesize = Original file size: %S
 preview_resized = Verkleind naar: %S px x %S px
