--- a/locale/zh-CN/shrunked.properties
+++ b/locale/zh-CN/shrunked.properties
@@ -10,6 +10,7 @@ no_label = 否
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = 调整此图片的尺寸？;调整此图片的尺寸？;
+context_label = Resize this image…;Resize these images…
 preview_originalsize = 原尺寸：%S px × %S px
 preview_originalfilesize = 原文件大小：%S
 preview_resized = 调整到：%S px × %S px
