--- a/locale/hr/shrunked.properties
+++ b/locale/hr/shrunked.properties
@@ -10,6 +10,7 @@ no_label = No
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Pomjena veličine ove slike?;Pomjena veličine ovih slika?
+context_label = Resize this image…;Resize these images…
 preview_originalsize = Izvorna veličina: %S px × %S px
 preview_originalfilesize = Original file size: %S
 preview_resized = Promijeniti na: %S px × %S px
