--- a/locale/en-US/shrunked.dtd
+++ b/locale/en-US/shrunked.dtd
@@ -31,3 +31,6 @@
 <!ENTITY shrunked-advanced.orient.label "Automatically rotate images">
 <!ENTITY shrunked-advanced.gps.label "Transfer GPS data">
 <!ENTITY shrunked-advanced.logenabled.label "Log messages to Error Console">
+<!ENTITY shrunked-advanced.resizeonsend.label "Offer to resize image attachments:">
+<!ENTITY shrunked-advanced.resizeonsend.false "when attached">
+<!ENTITY shrunked-advanced.resizeonsend.true "when sending email">
