--- a/locale/en-US/shrunked.properties
+++ b/locale/en-US/shrunked.properties
@@ -26,5 +26,7 @@ unit_megabytes = MB
 status_resizing = Resizing image…;Resizing images…
 
 donate_notification = Shrunked Image Resizer has been updated to version %S. Shrunked is free, but your donation is appreciated!
+changelog_button_label = What Changed?
+changelog_button_accesskey = C
 donate_button_label = Donate
 donate_button_accesskey = D
