Update version and locales for release

--- a/locale/cs/shrunked.dtd
+++ b/locale/cs/shrunked.dtd
@@ -31,3 +31,6 @@
 <!ENTITY shrunked-advanced.orient.label "Automaticky otočit obrázky">
 <!ENTITY shrunked-advanced.gps.label "Přenést GPS údaje">
 <!ENTITY shrunked-advanced.logenabled.label "Zaznamenat chybové zprávy">
+<!ENTITY shrunked-advanced.resizeonsend.label "Offer to resize image attachments:">
+<!ENTITY shrunked-advanced.resizeonsend.false "when attached">
+<!ENTITY shrunked-advanced.resizeonsend.true "when sending email">
