--- a/locale/cs/shrunked.properties
+++ b/locale/cs/shrunked.properties
@@ -26,5 +26,7 @@ unit_megabytes = MB
 status_resizing = Měním velikost obrázku…;Měním velikost obrázků…
 
 donate_notification = Shrunked Image Resizer nebyl updatován na verzi %S. Shrunked je zdarma, ale uvítáme Váš příspěvek na vývoj.
+changelog_button_label = What Changed?
+changelog_button_accesskey = C
 donate_button_label = Přispějte
 donate_button_accesskey = P
