--- a/locale/es-ES/shrunked.properties
+++ b/locale/es-ES/shrunked.properties
@@ -26,5 +26,7 @@ unit_megabytes = MB
 status_resizing = Redimensionando imagen…;Redimensionando imágenes…
 
 donate_notification = El redimensionador de imágenes Shrunked se ha actualizado a la versión %S. Shrunked es gratis, pero se agradece tu donación!
+changelog_button_label = What Changed?
+changelog_button_accesskey = C
 donate_button_label = Donar
 donate_button_accesskey = D
