--- a/locale/fr/shrunked.properties
+++ b/locale/fr/shrunked.properties
@@ -26,5 +26,7 @@ unit_megabytes = MB
 status_resizing = Redimensionnement de l'image…;Redimensionnement des images…
 
 donate_notification = Shrunked Image Resizer a été mis à jour à la version %S. Shrunked est gratuit, mais une don sera apprécié!
+changelog_button_label = What Changed?
+changelog_button_accesskey = C
 donate_button_label = Donner
 donate_button_accesskey = D
