--- a/locale/hr/shrunked.properties
+++ b/locale/hr/shrunked.properties
@@ -26,5 +26,7 @@ unit_megabytes = MB
 status_resizing = Pomjena veličine slike…;Pomjena veličine slika…
 
 donate_notification = Shrunked Image Resizer je ažuriran na verziju %S. Molimo vas da razmislite o donaciji.
+changelog_button_label = What Changed?
+changelog_button_accesskey = C
 donate_button_label = Doniraj
 donate_button_accesskey = D
