--- a/locale/it/shrunked.properties
+++ b/locale/it/shrunked.properties
@@ -26,5 +26,7 @@ unit_megabytes = MB
 status_resizing = Ridimensionamento immagine…;Ridimensionamento immagini…
 
 donate_notification = Shrunked Image Resizer è stato aggiornato alla versione %S. Shrunked è gratuito, ma è gradita una tua donazione!
+changelog_button_label = What Changed?
+changelog_button_accesskey = C
 donate_button_label = Dona
 donate_button_accesskey = D
