--- a/locale/nl/shrunked.properties
+++ b/locale/nl/shrunked.properties
@@ -26,5 +26,7 @@ unit_megabytes = MB
 status_resizing = Bezig met verkleinen van afbeelding...;Bezig met verkleinen van afbeeldingen...
 
 donate_notification = Shrunked Afbeeldingsverkleiner is bijgewerkt naar versie %S. Overweeg om een donatie te doen.
+changelog_button_label = What Changed?
+changelog_button_accesskey = C
 donate_button_label = Doneren
 donate_button_accesskey = D
