--- a/locale/fr/shrunked.dtd
+++ b/locale/fr/shrunked.dtd
@@ -31,3 +31,6 @@
 <!ENTITY shrunked-advanced.orient.label "Roation automatique des images">
 <!ENTITY shrunked-advanced.gps.label "Transférer les données GPS">
 <!ENTITY shrunked-advanced.logenabled.label "Messages d'erreur">
+<!ENTITY shrunked-advanced.resizeonsend.label "Offer to resize image attachments:">
+<!ENTITY shrunked-advanced.resizeonsend.false "when attached">
+<!ENTITY shrunked-advanced.resizeonsend.true "when sending email">
