--- a/locale/it/shrunked.dtd
+++ b/locale/it/shrunked.dtd
@@ -31,3 +31,6 @@
 <!ENTITY shrunked-advanced.orient.label "Ruota le immagini automaticamente">
 <!ENTITY shrunked-advanced.gps.label "Trasferisci i dati GPS">
 <!ENTITY shrunked-advanced.logenabled.label "Log messages to Error Console">
+<!ENTITY shrunked-advanced.resizeonsend.label "Offer to resize image attachments:">
+<!ENTITY shrunked-advanced.resizeonsend.false "when attached">
+<!ENTITY shrunked-advanced.resizeonsend.true "when sending email">
