--- a/locale/zh-CN/shrunked.properties
+++ b/locale/zh-CN/shrunked.properties
@@ -26,7 +26,7 @@ unit_megabytes = MB
 status_resizing = 正在调整图片尺寸…;正在调整图片尺寸…
 
 donate_notification = Shrunked Image Resizer 已更新到版本 %S。Shrunked 是一款免费软件，但您的捐助能让我们变得更好！
-changelog_button_label = What Changed?
+changelog_button_label = 有什么改变？
 changelog_button_accesskey = C
 donate_button_label = 捐助
 donate_button_accesskey = D
