--- a/locale/fr/shrunked.properties
+++ b/locale/fr/shrunked.properties
@@ -7,7 +7,7 @@ no_label = Non
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Redimensionner cette image?;Redimensionner ces images?
-context_label = Resize this image…;Resize these images…
+context_label = Redimensionner cette image…;Redimensionner ces images…
 preview_originalsize = Dimensions d'origine: %S px × %S px
 preview_originalfilesize = Taille d'origine: %S
 preview_resized = Redimensionné à: %S px × %S px
