--- a/locale/fr/shrunked.dtd
+++ b/locale/fr/shrunked.dtd
@@ -23,7 +23,7 @@
 <!ENTITY shrunked-advanced.label "Avancé">
 <!ENTITY shrunked-advanced.resample.label "Rééchantillonner les images en utilisant JavaScript">
 <!ENTITY shrunked-advanced.exif.label "Transfert des données EXIF">
-<!ENTITY shrunked-advanced.orient.label "Roation automatique des images">
+<!ENTITY shrunked-advanced.orient.label "Rotation automatique des images">
 <!ENTITY shrunked-advanced.gps.label "Transférer les données GPS">
 <!ENTITY shrunked-advanced.logenabled.label "Messages d'erreur">
 <!ENTITY shrunked-advanced.resizeonsend.label "Offer to resize image attachments:">
