Fix typo in fr donate_notification

--- a/locale/fr/shrunked.properties
+++ b/locale/fr/shrunked.properties
@@ -22,7 +22,7 @@ unit_megabytes = MB
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 status_resizing = Redimensionnement de l'image…;Redimensionnement des images…
 
-donate_notification = Shrunked Image Resizer a été mis à jour à la version %S. Shrunked est gratuit, mais une don sera apprécié!
+donate_notification = Shrunked Image Resizer a été mis à jour à la version %S. Shrunked est gratuit, mais un don sera apprécié!
 changelog_button_label = What Changed?
 changelog_button_accesskey = C
 donate_button_label = Donner
