--- a/locale/fr/shrunked.properties
+++ b/locale/fr/shrunked.properties
@@ -6,8 +6,8 @@ no_label = Non
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
-questions = Redimensionner cette image?;Redimensionner ces images?
-context_label = Resize this image…;Resize these images…
+questions = Redimensionner cette image ?;Redimensionner ces images ?
+context_label = Redimensionner cette image…;Redimensionner ces images…
 preview_originalsize = Dimensions d'origine: %S px × %S px
 preview_originalfilesize = Taille d'origine: %S
 preview_resized = Redimensionné à: %S px × %S px
@@ -22,8 +22,8 @@ unit_megabytes = MB
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 status_resizing = Redimensionnement de l'image…;Redimensionnement des images…
 
-donate_notification = Shrunked Image Resizer a été mis à jour à la version %S. Shrunked est gratuit, mais une don sera apprécié!
-changelog_button_label = What Changed?
+donate_notification = Shrunked Image Resizer a été mis à jour à la version %S. Shrunked est gratuit, mais un don sera apprécié !
+changelog_button_label = Quoi de neuf ?
 changelog_button_accesskey = C
 donate_button_label = Donner
 donate_button_accesskey = D
