--- a/locale/de/shrunked.properties
+++ b/locale/de/shrunked.properties
@@ -23,7 +23,7 @@ unit_megabytes = MB
 status_resizing = Bild skalieren…;Bilder skalieren…
 
 donate_notification = Shrunked Image Resizer wurde auf die Version %S aktualisiert. Shrunked ist kostenlos, aber Ihre Spende ist willkommen!
-changelog_button_label = What Changed?
+changelog_button_label = Was hat sich geändert?
 changelog_button_accesskey = C
 donate_button_label = Spenden
 donate_button_accesskey = d
