--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -17,6 +17,18 @@
   "advanced.resample.label": {
     "message": "Neuberechnung der Bilder mit Hilfe von Javascript"
   },
+  "advanced.resizeonsend.label": {
+    "message": "Anbieten, Bilder zu skalieren:"
+  },
+  "advanced.resizeonsend.false": {
+    "message": "beim Anhängen"
+  },
+  "advanced.resizeonsend.true": {
+    "message": "beim Senden der Mail"
+  },
+  "changelog.button.label": {
+    "message": "Was hat sich geändert?"
+  },
   "config.title": {
     "message": "Shrunked Image Resizer - Einstellungen"
   },
