Adding context.* messages for locale de

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -32,6 +32,12 @@
   "config.title": {
     "message": "Shrunked Image Resizer - Einstellungen"
   },
+  "context.plural": {
+    "message": "Skalierung dieser Bilder…"
+  },
+  "context.single": {
+    "message": "Skalierung dieses Bilds…"
+  },
   "custom.label": {
     "message": "Benutzerdefiniert"
   },
